--- a/package.json
+++ b/package.json
@@ -12,12 +12,30 @@
     "start": "next start"
   },
   "dependencies": {
-    "@planetscale/database": "^1.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@planetscale/database": "^1.16.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@vis.gl/react-google-maps": "^0.7.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "dotenv": "^16.4.4",
     "drizzle-orm": "^0.29.3",
+    "fs": "0.0.1-security",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,6 +53,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "shadcn-ui": "^0.8.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   },
