--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "drizzle-kit push:sqlite",
+    "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
@@ -30,6 +30,8 @@
     "cmdk": "0.2.1",
     "drizzle-orm": "^0.29.5",
     "next": "^14.1.4",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.1",
@@ -41,6 +43,7 @@
     "@types/better-sqlite3": "^7.6.9",
     "@types/eslint": "^8.56.6",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.4",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
